--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               'fade-in': 'fadeIn 0.3s ease-out',
               'slide-in-right': 'slideInRight 0.4s ease-out',
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'pulse-glow': 'pulseGlow 2.5s ease-in-out infinite',
             },
             keyframes: {
               fadeIn: {
@@ -39,6 +40,16 @@
               slideInRight: {
                 '0%': { transform: 'translateX(100%)' },
                 '100%': { transform: 'translateX(0)' },
+              },
+              pulseGlow: {
+                '0%, 100%': { 
+                  boxShadow: '0 0 20px var(--glow-color, rgba(79,70,229,0.3))',
+                  transform: 'scale(1)'
+                },
+                '50%': { 
+                  boxShadow: '0 0 35px var(--glow-color, rgba(79,70,229,0.6))',
+                  transform: 'scale(1.02)'
+                },
               }
             }
           },
