--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             animation: {
               'fade-in': 'fadeIn 0.3s ease-out',
               'slide-in-right': 'slideInRight 0.4s ease-out',
+              'slide-in-from-right': 'slideInFromRight 0.3s ease-out',
+              'slide-out-left': 'slideOutLeft 0.3s ease-out',
+              'slide-down': 'slideDown 0.4s ease-out',
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'pulse-glow': 'pulseGlow 2.5s ease-in-out infinite',
             },
@@ -40,6 +43,18 @@
               slideInRight: {
                 '0%': { transform: 'translateX(100%)' },
                 '100%': { transform: 'translateX(0)' },
+              },
+              slideInFromRight: {
+                '0%': { transform: 'translate(100%, 0)', opacity: '0' },
+                '100%': { transform: 'translate(-50%, 0)', opacity: '1' },
+              },
+              slideOutLeft: {
+                '0%': { transform: 'translate(-50%, 0)', opacity: '1' },
+                '100%': { transform: 'translate(-200%, 0)', opacity: '0' },
+              },
+              slideDown: {
+                '0%': { transform: 'translate(-50%, -100%)', opacity: '0' },
+                '100%': { transform: 'translate(-50%, 0)', opacity: '1' },
               },
               pulseGlow: {
                 '0%, 100%': { 
