--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
               'fade-in': 'fadeIn 0.3s ease-out',
               'fade-out-in': 'fadeOutIn 0.6s ease-in-out',
               'slide-in-right': 'slideInRight 0.4s ease-out',
+              'slide-out-right': 'slideOutRight 0.4s ease-out forwards',
               'slide-in-from-right': 'slideInFromRight 0.3s ease-out',
               'slide-out-left': 'slideOutLeft 0.3s ease-out forwards',
               'slide-down': 'slideDown 0.4s ease-out',
+              'slide-from-center': 'slideFromCenter 0.5s ease-out forwards',
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'pulse-glow': 'pulseGlow 2.5s ease-in-out infinite',
             },
@@ -50,6 +52,10 @@
                 '0%': { transform: 'translateX(100%)' },
                 '100%': { transform: 'translateX(0)' },
               },
+              slideOutRight: {
+                '0%': { transform: 'translateX(0)', opacity: '1' },
+                '100%': { transform: 'translateX(100%)', opacity: '0' },
+              },
               slideInFromRight: {
                 '0%': { transform: 'translate(100%, 0)', opacity: '0' },
                 '100%': { transform: 'translate(-50%, 0)', opacity: '1' },
@@ -61,6 +67,10 @@
               slideDown: {
                 '0%': { transform: 'translate(-50%, -100%)', opacity: '0' },
                 '100%': { transform: 'translate(-50%, 0)', opacity: '1' },
+              },
+              slideFromCenter: {
+                '0%': { transform: 'translate(var(--translate-x, 0), var(--translate-y, 0))', opacity: '0' },
+                '100%': { transform: 'translate(0, 0)', opacity: '1' },
               },
               pulseGlow: {
                 '0%, 100%': { 
