--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -107,48 +107,19 @@
         },
       }
     </script>
-    <style>
-      body {
-        background-color: #101622;
-        color: #e2e8f0;
-        overflow: hidden; /* No Scroll Policy */
-      }
-      .glass-panel {
-        background: rgba(30, 41, 59, 0.7);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .scrollbar-hide::-webkit-scrollbar {
-          display: none;
-      }
-      .scrollbar-hide {
-          -ms-overflow-style: none;
-          scrollbar-width: none;
-      }
-      /* Range Slider Customization */
-      input[type=range] {
-        -webkit-appearance: none;
-        background: transparent;
-      }
-      input[type=range]::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        height: 16px;
-        width: 16px;
-        border-radius: 50%;
-        background: #e2e8f0;
-        cursor: pointer;
-        margin-top: -6px;
-        box-shadow: 0 0 0 1px #4f46e5;
-      }
-      input[type=range]::-webkit-slider-runnable-track {
-        width: 100%;
-        height: 4px;
-        cursor: pointer;
-        background: #334155;
-        border-radius: 2px;
-      }
-    </style>
+    <script>
+      // Detect OS theme preference and set initial theme class
+      (function() {
+        const stored = localStorage.getItem('mycouncil-theme');
+        if (stored) {
+          document.documentElement.classList.toggle('dark', stored === 'dark');
+        } else {
+          // Default to OS preference
+          const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+          document.documentElement.classList.toggle('dark', prefersDark);
+        }
+      })();
+    </script>
   <script type="importmap">
 {
   "imports": {
