--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MyCouncil</title>
     <link rel="icon" type="image/x-icon" href="/imgs/favi.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
     <script>
       tailwind.config = {
@@ -15,6 +15,7 @@
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+              orbitron: ['Orbitron', 'sans-serif'],
             },
             colors: {
               background: {
