--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               'fade-in': 'fadeIn 0.3s ease-out',
               'fade-out-in': 'fadeOutIn 0.6s ease-in-out',
               'slide-in-right': 'slideInRight 0.4s ease-out',
+              'slide-in-left': 'slideInLeft 0.4s ease-out',
               'slide-out-right': 'slideOutRight 0.4s ease-out forwards',
               'slide-in-from-right': 'slideInFromRight 0.3s ease-out',
               'slide-out-left': 'slideOutLeft 0.3s ease-out forwards',
@@ -59,6 +60,10 @@
               },
               slideInRight: {
                 '0%': { transform: 'translateX(100%)' },
+                '100%': { transform: 'translateX(0)' },
+              },
+              slideInLeft: {
+                '0%': { transform: 'translateX(-100%)' },
                 '100%': { transform: 'translateX(0)' },
               },
               slideOutRight: {
