Disabled debate mode on refresh debate/refinement

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://aistudiocdn.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' http://localhost:3000 ws://localhost:3001; img-src 'self' data: https://avataaars.io;">
     <title>MyCouncil</title>
     <link rel="icon" type="image/x-icon" href="/imgs/favi.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
